refact: algumas melhorias

--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -98,14 +98,15 @@
                      </div>
 
                      <div class="col-md-2">
-                           <div class="mb-3 text-center">
-                              <label class="form-label fw-bold">Valor</label>
-                              <div class="input-group">
-                                 <span class="input-group-text">R$</span>
-                                 <input id="valor" type="number" class="form-control" name="valor">
-                              </div>
-                           </div>
-                     </div>
+                        <div class="mb-3 text-center">
+                          <label class="form-label fw-bold">Valor Unitário</label>
+                          <div class="input-group">
+                            <span class="input-group-text">R$</span>
+                            <input id="valor" type="number" class="form-control" name="valor" step="0.01">
+                          </div>
+                        </div>
+                      </div>
+                      
                   </div>
 
                   <div id="row2" class="row">
