--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -72,162 +72,155 @@
       }
    </style>
 
-   <body>
-      <%- include('../partials/header') %>
-
-         <div class="caixa w-90 p-4 mx-auto">
-            <div class="row d-flex justify-content-center botoes">
-               <div class="col-md-1 mx-3">
-                  <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0 mx-3">Entradas /
-                     Saida</a>
-               </div>
-               <div class="col-md-1 mx-3">
-                  <a href="/estoque/itenspagos"
-                     class="btn btn-outline-success w-100 btn-header fw-bold nav-link active px-2 py-2 mx-3">Itens
-                     pagos</a>
-               </div>
-               <div class="col-md-1 mx-3">
-                  <a href="/historico-movimentacao-page"
-                     class="btn btn-outline-success w-100 btn-header fw-bold mx-3">Histórico</a>
-               </div>
-            </div>
-
-            <div class="border caixa-externa p-4 shadow-sm rounded">
-               <div class="row align-items-center mb-3 px-3">
-                  <h2 style="border-bottom: 4px solid orange;"
-                     class="text-center text-white py-2 mt-0 fw-bold bg-success">Itens
-                     que saíram do estoque
-                  </h2>
-               </div>
-               <div class="table-container">
-                  <table class="table table-striped table-hover mb-0">
-                     <thead>
-                        <tr>
-                           <th class="text-center">ID</th>
-                           <th>Descrição</th>
-                           <th class="text-center">Data da Saída</th>
-                           <th class="text-center">Destino</th>
-                           <th class="text-center">Referência</th>
-                           <th class="text-center">Ações</th>
-                        </tr>
-                     </thead>
-                     <tbody>
-                        <% if (itensPagos.length> 0) { %>
-                           <% itensPagos.forEach(function(item) { %>
-                              <tr>
-                                 <td class="py-1 text-center">
-                                    <%= item.id %>
-                                 </td>
-                                 <td class="py-1">
-                                    <%= item.descricao.toUpperCase() %>
-                                 </td>
-                                 <td class="py-1 text-center">
-                                    <%= new Date(item.data_de_saida).toLocaleDateString('pt-BR') %>
-                                 </td>
-                                 <td class="py-1 text-center">
-                                    <%= item.destino.toUpperCase() %>
-                                 </td>
-                                 <td class="py-1 text-center">
-                                    <%= item.referencia.toUpperCase() %>
-                                 </td>
-                                 <td class="py-1 text-center w-10">
-                                    <button type="button" class="btn btn-secondary btn-sm btn-action"
-                                       data-id="<%= item.id %>">Detalhes</button>
-                                 </td>
-                              </tr>
-                              <% }); %>
-                                 <% } else { %>
-                                    <tr>
-                                 <td colspan="11" class="text-center">Ainda não há itens Pagos</td>
-                              </tr>
-                           <% } %>
-                     </tbody>
-                  </table>
-               </div>
-            </div>
+<body>
+   <%- include('../partials/header') %>
+   <div class="caixa w-90 p-4 mx-auto">
+      <div class="row d-flex justify-content-center botoes">
+         <div class="col-md-1 mx-3">
+            <a href="/relatorios" class="btn btn-outline-success w-100 btn-header fw-bold px-0 mx-3">Entradas /
+               Saida</a>
          </div>
-
-         <!-- JavaScript para exibição do modal -->
-         <script>
-            // JavaScript para exibição do modal
-            document.addEventListener('DOMContentLoaded', () => {
-               const viewButtons = document.querySelectorAll('.btn-action');
-
-               viewButtons.forEach(button => {
-                  button.addEventListener('click', async (event) => {
-                     const itemId = event.target.getAttribute('data-id');
-                     const url = `/visualizar/itempago/${itemId}`;
-                     try {
-                        console.log("Fetching data for item ID:", itemId);
-                        const response = await fetch(url);
-                        if (!response.ok) {
-                           throw new Error(`ERRO: ${response.statusText.toUpperCase()}`);
-                        }
-                        const item = await response.json();
-                        console.log("Data fetched:", item);
-
-                        if (item) {
-                           // Alterando o tombo para usar o valor de tombo_estoqueatual
-                           item.tombo = item.tombo_estoqueatual;
-
-                           const modalHtml = `
-                              <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
-                                    <div class="modal-content">
-                                       <div class="modal-header bg-success text-white d-flex justify-content-between">
-                                       <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do item pago</h3>
-                                       <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
-                                       <i class="fa fa-times fa-lg"></i>
-                                       </button>
-                                       </div>
-                                       <div class="modal-body">
-                                       <div class="card">
-                                          <div class="card-body pb-0">
-                                             <h5 class="card-title">${item.descricao}</h5>
-                                             <p class="card-text">
-                                                <h5 class="bg-danger text-white p-2">DADOS DA SAÍDA</h5> <!-- Texto da seção em UPPERCASE -->
-                                                <strong>TOMBO:</strong> ${item.tombo} <br/> <!-- Alterado para usar o valor correto -->
-                                                <strong>DATA DA SAÍDA:</strong> ${new Date(item.data_de_saida).toLocaleDateString('pt-BR')} <br/>
-                                                <strong>DESTINO:</strong> ${item.destino.toUpperCase()} <br/> <!-- Destino em UPPERCASE -->
-                                                <strong>REFERÊNCIA:</strong> ${item.referencia} <br/>
-                                                <strong>DOC SAÍDA:</strong> ${item.doc_saida} <br/>
-                                                <strong>NOME COMPLETO:</strong> ${item.nome_completo} <br/>
-                                                <strong>POSTO/GRADUAÇÃO:</strong> ${item.posto_graduacao} <br/>
-                                                <strong>MAT FUNCIONAL:</strong> ${item.mat_funcional} <br/>
-                                                <strong>TELEFONE:</strong> ${item.telefone} <br/>
-                                                <strong>OBSERVAÇÃO:</strong> ${item.observacao || 'N/A'} <br/> <!-- Texto específico sendo uppercase -->
-                                             </p>
-                                          </div>
-                                       </div>
-                                       </div>
+         <div class="col-md-1 mx-3">
+            <a href="/estoque/itenspagos"
+               class="btn btn-outline-success w-100 btn-header fw-bold nav-link active px-2 py-2 mx-3">Itens
+               pagos</a>
+         </div>
+         <div class="col-md-1 mx-3">
+            <a href="/historico-movimentacao-page"
+               class="btn btn-outline-success w-100 btn-header fw-bold mx-3">Histórico</a>
+         </div>
+      </div>
+      <div class="border caixa-externa p-4 shadow-sm rounded">
+         <div class="row align-items-center mb-3 px-3">
+            <h2 style="border-bottom: 4px solid orange;"
+               class="text-center text-white py-2 mt-0 fw-bold bg-success">Itens
+               que saíram do estoque
+            </h2>
+         </div>
+         <div class="table-container">
+            <table class="table table-striped table-hover mb-0">
+               <thead>
+                  <tr>
+                     <th class="text-center">ID</th>
+                     <th class="text-center">Data da Saída</th>
+                     <th>Descrição</th>
+                     <th class="text-center">Tombo</th> 
+                     <th class="text-center">Destino</th>
+                     <th class="text-center">Referência</th>
+                     <th class="text-center">Ações</th>
+                  </tr>
+               </thead>
+               <tbody>
+                  <% if (itensPagos.length > 0) { %>
+                     <% itensPagos.forEach(function(item) { %>
+                        <tr>
+                           <td class="py-1 text-center">
+                              <%= item.id %>
+                           </td>
+                           <td class="py-1 text-center">
+                              <%= new Date(item.data_de_saida).toLocaleDateString('pt-BR') %>
+                           </td>
+                           <td class="py-1">
+                              <%= item.descricao.toUpperCase() %>
+                           </td>
+                           <td class="py-1 text-center">
+                              <%= item.tombo_estoqueatual %> <!-- Valor do Tombo -->
+                           </td>
+                           <td class="py-1 text-center">
+                              <%= item.destino.toUpperCase() %>
+                           </td>
+                           <td class="py-1 text-center">
+                              <%= item.referencia.toUpperCase() %>
+                           </td>
+                           <td class="py-1 text-center w-10">
+                              <button type="button" class="btn btn-secondary btn-sm btn-action"
+                                 data-id="<%= item.id %>">Detalhes</button>
+                           </td>
+                        </tr>
+                        <% }); %>
+                           <% } else { %>
+                              <tr>
+                           <td colspan="7" class="text-center">Ainda não há itens Pagos</td>
+                        </tr>
+                     <% } %>
+               </tbody>
+            </table>
+         </div>
+      </div>
+   </div>
+   <!-- JavaScript para exibição do modal -->
+   <script>
+      // JavaScript para exibição do modal
+      document.addEventListener('DOMContentLoaded', () => {
+         const viewButtons = document.querySelectorAll('.btn-action');
+         viewButtons.forEach(button => {
+            button.addEventListener('click', async (event) => {
+               const itemId = event.target.getAttribute('data-id');
+               const url = `/visualizar/itempago/${itemId}`;
+               try {
+                  console.log("Fetching data for item ID:", itemId);
+                  const response = await fetch(url);
+                  if (!response.ok) {
+                     throw new Error(`ERRO: ${response.statusText.toUpperCase()}`);
+                  }
+                  const item = await response.json();
+                  console.log("Data fetched:", item);
+                  if (item) {
+                     item.tombo = item.tombo_estoqueatual;
+                     const modalHtml = `
+                        <div class="modal fade show" id="infoTomboModal" tabindex="-1" aria-labelledby="infoTomboModalLabel" aria-hidden="true">
+                              <div class="modal-dialog modal-dialog-centered" style="transform: scale(1);">
+                              <div class="modal-content">
+                                 <div class="modal-header bg-success text-white d-flex justify-content-between">
+                                 <h3 class="modal-title ms-3" id="infoTomboModalLabel">Informações do item pago</h3>
+                                 <button type="button" class="btn text-white" data-bs-dismiss="modal" aria-label="Close">
+                                 <i class="fa fa-times fa-lg"></i>
+                                 </button>
+                                 </div>
+                                 <div class="modal-body">
+                                 <div class="card">
+                                    <div class="card-body pb-0">
+                                       <h5 class="card-title">${item.descricao}</h5>
+                                       <p class="card-text">
+                                          <h5 class="bg-danger text-white p-2">DADOS DA SAÍDA</h5>
+                                          <strong>TOMBO:</strong> ${item.tombo} <br/>
+                                          <strong>DATA DA SAÍDA:</strong> ${new Date(item.data_de_saida).toLocaleDateString('pt-BR')} <br/>
+                                          <strong>DESTINO:</strong> ${item.destino.toUpperCase()} <br/>
+                                          <strong>REFERÊNCIA:</strong> ${item.referencia} <br/>
+                                          <strong>DOC SAÍDA:</strong> ${item.doc_saida} <br/>
+                                          <strong>NOME COMPLETO:</strong> ${item.nome_completo} <br/>
+                                          <strong>POSTO/GRADUAÇÃO:</strong> ${item.posto_graduacao} <br/>
+                                          <strong>MAT FUNCIONAL:</strong> ${item.mat_funcional} <br/>
+                                          <strong>TELEFONE:</strong> ${item.telefone} <br/>
+                                          <strong>OBSERVAÇÃO:</strong> ${item.observacao || 'N/A'} <br/>
+                                       </p>
                                     </div>
                                  </div>
+                                 </div>
+                              </div>
                            </div>
-                        `;
-
-                           const modalDiv = document.createElement('div');
-                           modalDiv.innerHTML = modalHtml;
-                           document.body.appendChild(modalDiv);
-
-                           const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
-                              backdrop: true,
-                              focus: true
-                           });
-
-                           infoTomboModal.show();
-
-                           infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
-                              modalDiv.remove();
-                           });
-                        }
-                     } catch (error) {
-                        console.error('ERRO AO BUSCAR INFORMAÇÕES DO ITEM:', error.message.toUpperCase());
-                     }
-                  });
-               });
+                     </div>
+                  `;
+                     const modalDiv = document.createElement('div');
+                     modalDiv.innerHTML = modalHtml;
+                     document.body.appendChild(modalDiv);
+                     const infoTomboModal = new bootstrap.Modal(document.getElementById('infoTomboModal'), {
+                        backdrop: true,
+                        focus: true
+                     });
+                     infoTomboModal.show();
+                     infoTomboModal._element.addEventListener('hidden.bs.modal', () => {
+                        modalDiv.remove();
+                     });
+                  }
+               } catch (error) {
+                  console.error('ERRO AO BUSCAR INFORMAÇÕES DO ITEM:', error.message.toUpperCase());
+               }
             });
+         });
+      });
+   </script>
+</body>
 
-         </script>
-   </body>
 
 </html>
