fix: correção para trazer os numeros dos tombos na tabela de itens pagos e a inserção da coluna "situação na criação do pdf"

--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -106,8 +106,8 @@
                      <th>Descrição</th>
                      <th class="text-center">Tombo</th> 
                      <th class="text-center">Destino</th>
-                     <th class="text-center">Referência</th>
-                     <th class="text-center">Ações</th>
+                     <th class="text-center">NUP (Suite)</th>
+                     <th class="text-center">Vizualizar</th>
                   </tr>
                </thead>
                <tbody>
