modificação na estrutura da numeração do tombo

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,16 +11,16 @@
   padding: 0;
 }
 
-body {
+/* body {
   margin-top: 2rem;
-}
+} */
 
 main {
   padding: 1rem;
 }
 
 .caixa {
-  /* margin-top: 5rem; */
+  margin-top: 2rem;
 }
 
 .caixa-externa{
