--- a/src/views/pages/pesquisaAvancada.ejs
+++ b/src/views/pages/pesquisaAvancada.ejs
@@ -42,7 +42,7 @@
 <body>
   <%- include('../partials/header') %>
 
-    <div class="caixa container p-4">
+    <div class="caixa container p-4 w-50">
       <div class=" border caixa-externa p-4 shadow-sm rounded">
       <div class="table-container">
         <div class="row mt-0">
@@ -78,21 +78,11 @@
                     </select>
                   </div>
                 </div>
-                <div class="col-md-2">
-                  <div class="form-group fw-bold"> <label class="form-label fw-bold" for="subgrupo">Subgrupo</label>
-                    <select id="subgrupo" class="form-select" name="subgrupo">
-                      <option value=""></option>
-                      <option value="A">A</option>
-                      <option value="B">B</option>
-                      <option value="C">C</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                   <div class="form-group fw-bold"> <label for="tombo">Tombo:</label> <input type="text" id="tombo"
                       name="tombo" class="form-control mt-2"> </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                   <div class="form-group fw-bold"> <label for="data">Ano:</label> <input type="number" id="data"
                       name="data" class="form-control mt-2" placeholder="Ex: 2025"> </div>
                 </div>
