--- a/src/views/pages/tabelaItensNovos.ejs
+++ b/src/views/pages/tabelaItensNovos.ejs
@@ -90,21 +90,19 @@
 
             <div class="row d-flex justify-content-center botoes">
                <div class="col-md-1 mx-3">
-                  <a href="/tabela/estoqueatual"
-                     class="btn btn-outline-success mx-2 w-100 btn-header fw-bold mx-3">Geral</a>
+                  <a href="/tabela/estoqueatual" class="btn btn-outline-success w-100 btn-header fw-bold">Geral</a>
                </div>
                <div class="col-md-1 mx-3">
-                  <a href="/tabela/itens-novos"
-                     class="btn btn-outline-success mx-2 w-100 btn-header fw-bold nav-link active py-2 mx-3">Itens
-                     Novo</a>
+                  <a href="/tabela/itens-novos" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Itens Novo</a>
                </div>
                <div class="col-md-1 mx-3">
-                  <a href="/tabela/itens-usados"
-                     class="btn btn-outline-success mx-2 w-100 btn-header fw-bold mx-3">Itens Usados</a>
+                  <a href="/tabela/itens-usados" class="btn btn-outline-success w-100 btn-header fw-bold">Itens Usados</a>
                </div>
                <div class="col-md-1 mx-3">
-                  <a href="/qtde-unica"
-                     class="btn btn-outline-success mx-2 w-100 btn-header fw-bold mx-3">Quantitativo</a>
+                  <a href="/qtde-unica" class="btn btn-outline-success w-100 btn-header fw-bold">Quantitativo</a>
+               </div>
+               <div class="col-md-1 mx-3">
+                  <a href="/generate-pdf-novos" class="btn btn-outline-success w-100 btn-header fw-bold">Gerar PDF</a>
                </div>
             </div>
 
