--- a/src/views/pages/tabelaItensUsados.ejs
+++ b/src/views/pages/tabelaItensUsados.ejs
@@ -86,30 +86,15 @@
    <body>
       <%- include('../partials/header') %>
 
-         <div class="caixa w-90 p-4 mx-auto">
-            <div class="row d-flex justify-content-center botoes">
-               <div class="col-md-1 mx-3">
-                  <a href="/tabela/estoqueatual" class="btn btn-outline-success w-100 btn-header fw-bold">Geral</a>
-               </div>
-               <div class="col-md-1 mx-3">
-                  <a href="/tabela/itens-novos" class="btn btn-outline-success w-100 btn-header fw-bold">Itens Novo</a>
-               </div>
-               <div class="col-md-1 mx-3">
-                  <a href="/tabela/itens-usados" class="btn btn-outline-success w-100 btn-header fw-bold nav-link active py-2">Itens Usados</a>
-               </div>
-               <div class="col-md-1 mx-3">
-                  <a href="/qtde-unica" class="btn btn-outline-success w-100 btn-header fw-bold">Quantitativo</a>
-               </div>
-               <div class="col-md-1 mx-3">
-                  <a href="/generate-pdf-usados" class="btn btn-outline-success w-100 btn-header fw-bold">Gerar PDF</a>
+      <div class="caixa w-90 p-4 mx-auto">
+         <div class="border caixa-externa p-4 shadow-sm rounded">
+            <div class="row align-items-center mb-3 px-3">
+               <div class="col d-flex justify-content-between align-items-center bg-success py-2 rounded" style="border-bottom: 4px solid orange;">
+                  <h2 class="text-white mt-0 fw-bold flex-grow-1 text-center">Itens Usados</h2>
+                  <a href="/generate-pdf-usados" class="btn btn-outline-light btn-header fw-bold ms-3">Gerar PDF</a>
                </div>
             </div>
 
-            <div class="border caixa-externa p-4 shadow-sm rounded">
-               <div class="row align-items-center mb-3 px-3">
-                  <h2 style="border-bottom: 4px solid orange;"
-                     class="text-center text-white py-2 mt-0 fw-bold bg-success"> Itens Usado</h2>
-               </div>
                <div class="table-container">
                   <table class="table table-striped table-hover mb-0">
                      <thead>
